--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,9 @@ exclude =
     */migrations/,
     venv/,
     env/
+    external/
 per-file-ignores =
     */settings.py:E501
+    __init__.py:F401
 max-complexity = 10
+max-line-length = 119
